--- a/project_02/package.json
+++ b/project_02/package.json
@@ -10,10 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cornerstonejs/core": "^1.82.4",
+    "@cornerstonejs/streaming-image-volume-loader": "^1.82.4",
+    "@cornerstonejs/tools": "^1.82.4",
+    "cornerstone-core": "^2.6.1",
+    "cornerstone-tools": "^6.0.10",
+    "cornerstone-wado-image-loader": "^4.13.2",
+    "dicom-parser": "^1.8.21",
+    "hammerjs": "^2.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/cornerstone-core": "^2.3.3",
+    "@types/hammerjs": "^2.0.45",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
